--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,36 +1,34 @@
-# This is a basic workflow to help you get started with Actions
-
 name: CI
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  # First job to set the variable
+  set-var:
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    outputs:
+      MY_VAR: ${{ steps.set_var.outputs.my_var }}
+
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v4
+      - name: Set a variable
+        id: set_var
+        run: echo "my_var=Hello from the first job!" >> $GITHUB_OUTPUT
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+  # Second job to print the variable set by the first job
+  print-var:
+    runs-on: ubuntu-latest
+    needs: set-var
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+    steps:
+      - name: Print the variable from the first job
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          echo "The value of MY_VAR is: ${{ needs.set-var.outputs.MY_VAR }}"
+          echo "This is an additional echo statement."
+          echo "You can modify or extend this workflow as needed."
+          echo "Remember to check your outputs for accurate information!"
